--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Hank Quinlan, Horrible Cop</title>
+		<!--CSS STYLESHEET -->
+		<link rel="stylesheet" type="text/css" herf="/css/main.css">
 	</head>
 	<body>
 		<nav>
