--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Hank Quinlan, Horrible Cop</title>
 		<!--CSS STYLESHEET -->
-		<link rel="stylesheet" type="text/css" herf="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
